# one_max

./: .gitignore  README.md  dashboard.py  example.env  job.py  main.py  pyproject.toml  requirements.txt
assets/: graphs.css  input.css  main.css
dasboard/: app.py  callbacks.py  data.py  figures.py
evolution/: __init__.py  evolution.py
graphs/: __init__.py  graphs.py
individual/: individual.py
population/: mixins.py  population.py
utils/: __init__.py  core.py  data_service.py  graphs.py
